github deployment spacing issue possible fix

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -29,7 +29,7 @@
 
     ul {
         text-align: center;
-        margin-bottom: 20px;
+        margin-top: 20px;
         padding: 0;
     }
 
